use create and cancel command + fix sql injection regex

--- a/charity-org/src/main/resources/application.properties
+++ b/charity-org/src/main/resources/application.properties
@@ -8,3 +8,4 @@ spring.jpa.defer-datasource-initialization=true
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 spring.h2.console.enabled=true
+spring.main.allow-bean-definition-overriding=true
